@@ -289,13 +289,12 @@
 
 
         <!-- Other -->
-        <hk2.version>2.5.0.payara-p1</hk2.version>
-        <hk2.plugin.version>2.5.0.payara-p1</hk2.plugin.version>
 
+        <hk2.version>2.5.0-b61.payara-p3</hk2.version>
+        <hk2.plugin.version>2.5.0-b61.payara-p3</hk2.plugin.version>
         <tiger.types.version>1.4.payara-p1</tiger.types.version>
 
-        <!-- 4.1.1-b001  -->
-        <glassfish-corba.version>4.1.1.payara-p1</glassfish-corba.version>
+        <glassfish-corba.version>4.1.1.payara-p3</glassfish-corba.version>
         <stax-api.version>1.0-2</stax-api.version>
         <saaj-api.version>1.4.0</saaj-api.version>
 
@@ -309,7 +308,7 @@
         <trilead-ssh2.version>build212-hudson-6</trilead-ssh2.version>
 
         <!-- Primitive Function Library (PFL); a library of simple utilities used by Glassfish -->
-        <pfl.version>4.0.1</pfl.version>
+        <pfl.version>4.0.1.payara-p1</pfl.version>
         <!-- GlassFish MBean Annotation Library -->
         <gmbal.version>4.0.0</gmbal.version>
         <antlr.version>2.7.7</antlr.version>
@@ -329,15 +328,15 @@
 
 
         <!-- Apache Felix is an open source implementation of the OSGi Core Release 6 framework specification. -->
-        <org.apache.felix.main.version>6.0.1</org.apache.felix.main.version>
+        <org.apache.felix.main.version>6.0.2</org.apache.felix.main.version>
         <org.apache.felix.webconsole.version>4.3.8</org.apache.felix.webconsole.version>
         <org.apache.felix.eventadmin.version>1.5.0</org.apache.felix.eventadmin.version>
         <org.apache.felix.shell.version>1.4.3</org.apache.felix.shell.version>
-        <org.apache.felix.gogo.runtime.version>1.1.0</org.apache.felix.gogo.runtime.version>
-        <org.apache.felix.gogo.shell.version>1.1.0</org.apache.felix.gogo.shell.version>
-        <org.apache.felix.gogo.command.version>1.0.2</org.apache.felix.gogo.command.version>
+        <org.apache.felix.gogo.runtime.version>1.1.2</org.apache.felix.gogo.runtime.version>
+        <org.apache.felix.gogo.shell.version>1.1.2</org.apache.felix.gogo.shell.version>
+        <org.apache.felix.gogo.command.version>1.1.0</org.apache.felix.gogo.command.version>
         <org.apache.felix.fileinstall.version>3.6.4.payara-p1</org.apache.felix.fileinstall.version>
-        <org.apache.felix.configadmin.version>1.9.10</org.apache.felix.configadmin.version>
+        <org.apache.felix.configadmin.version>1.9.14</org.apache.felix.configadmin.version>
         <org.apache.felix.scr.version>2.1.14</org.apache.felix.scr.version>
         <org.apache.felix.bundlerepository.version>2.0.10</org.apache.felix.bundlerepository.version>
 
@@ -357,12 +356,15 @@
         <snmp4j.version>2.5.3-payara.p1</snmp4j.version>
         <mockito.version>2.2.6</mockito.version>
         <guava.version>19.0</guava.version>
+        <jaxb-api.version>2.3.2</jaxb-api.version>
+        <jaxb-impl.version>2.3.2</jaxb-impl.version>
+
         <!-- Build -->
 
         <glassfishbuild.version>3.2.20.payara-p1</glassfishbuild.version>
         <source-annotation-processor.version>1.0</source-annotation-processor.version>
         <logging-annotation-processor.version>1.8</logging-annotation-processor.version>
-        <command-security-plugin.version>1.0.8</command-security-plugin.version>
+        <command-security-plugin.version>1.0.10.payara-p1</command-security-plugin.version>
         <command.security.maven.plugin.isFailureFatal>false</command.security.maven.plugin.isFailureFatal>
         <copyright-plugin.version>1.39</copyright-plugin.version>
         <nucleus.install.dir.name>nucleus</nucleus.install.dir.name>
@@ -430,7 +432,6 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven.compiler.plugin.version}</version>
                     <configuration>
-                        <compilerArgument>-Djava.endorsed.dirs=${project.build.directory}/endorsed</compilerArgument>
                         <source>${javase.version}</source>
                         <target>${javase.version}</target>
                         <excludes>
@@ -681,8 +682,8 @@
                         <configuration>
                             <rules>
                                 <requireJavaVersion>
-                                    <version>[${jdk.version},1.9.0)</version>
-                                    <message>You need JDK8 (${jdk.version}) or JDK9</message>
+                                    <version>[${jdk.version},18.9)</version>
+                                    <message>You need JDK8 (${jdk.version}) or JDK11</message>
                                 </requireJavaVersion>
                                 <requireMavenVersion>
                                     <version>[3.0.3,3.2.1],[3.2.3,)</version>
@@ -1154,8 +1155,8 @@ Parent is ${project.parent}</echo>
                 <version>${org.apache.felix.fileinstall.version}</version>
             </dependency>
             <dependency>
-               <groupId>org.apache.felix</groupId> <!-- Implementation of the OSGi Configuration Admin Service Specification 1.5  -->
-               <artifactId>org.apache.felix.configadmin</artifactId>
+                <groupId>org.apache.felix</groupId> <!-- Implementation of the OSGi Configuration Admin Service Specification 1.5  -->
+                <artifactId>org.apache.felix.configadmin</artifactId>
                 <version>${org.apache.felix.configadmin.version}</version>
             </dependency>
             <dependency>
@@ -1295,12 +1296,12 @@ Parent is ${project.parent}</echo>
             <dependency>
                 <groupId>org.testng</groupId>
                 <artifactId>testng</artifactId>
-                <version>6.5.2</version>
+                <version>6.14.3</version>
             </dependency>
             <dependency>
                 <groupId>org.jmockit</groupId>
                 <artifactId>jmockit</artifactId>
-                <version>1.32</version>
+                <version>1.40</version>
             </dependency>
             <dependency>
                 <groupId>org.hamcrest</groupId>
@@ -1346,7 +1347,7 @@ Parent is ${project.parent}</echo>
             <dependency>
                 <groupId>org.bsc.maven</groupId>
                 <artifactId>maven-processor-plugin</artifactId>
-                <version>2.0.4</version>
+                <version>3.3.3</version>
             </dependency>
             <dependency>
                 <groupId>org.glassfish.annotations</groupId>
@@ -1363,6 +1364,11 @@ Parent is ${project.parent}</echo>
                 <groupId>org.fusesource.hawtjni</groupId>
                 <artifactId>hawtjni-runtime</artifactId>
                 <version>1.13</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.hk2.external</groupId>
+                <artifactId>asm-repackaged</artifactId>
+                <version>${hk2.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.javassist</groupId>
@@ -1388,6 +1394,16 @@ Parent is ${project.parent}</echo>
                 <groupId>com.hazelcast</groupId>
                 <artifactId>hazelcast-kubernetes</artifactId>
                 <version>${hazelcast.kubernetes.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>jakarta.xml.bind</groupId>
+                <artifactId>jakarta.xml.bind-api</artifactId>
+                <version>${jaxb-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
+                <version>${jaxb-impl.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
